# strawberry-tiny-workshop

./: README.md  main.py  pyproject.toml  requirements.txt
app/api/: fake_db.py  schema.py
